fix(modal): Fix shared link setting modal input overflow (#1928)

--- a/src/features/shared-link-settings-modal/SharedLinkSettingsModal.scss
+++ b/src/features/shared-link-settings-modal/SharedLinkSettingsModal.scss
@@ -15,7 +15,12 @@
     }
 
     .checkbox-subsection {
+        max-width: 400px;
         margin-left: 0;
+
+        .custom-url-preview {
+            overflow: hidden;
+        }
     }
 
     .vanity-name-section {
